# postman/schemas/openapi.json
@@ -149,6 +149,32 @@
           }
         ]
       }
+    },
+    "/cats/no": {
+      "get": {
+        "operationId": "postmanAddApiTest",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "cats"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
     }
   },
   "info": {
